--- a/index.html
+++ b/index.html
@@ -6667,6 +6667,9 @@ jQuery(document).ready(function($) {
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
 									<option value="cryptoid.info_carboncoin"> Cryptoid.info (Carboncoin)</option>
 									<option value="shadowcash.host"> ShadowCash</option>
+									<option value="bch.host">Bitcoin Cash</option>
+									<option value="bsv.host">Bitcoin SV</option>
+									<option value="dash.host">Dash</option>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
@@ -6694,6 +6697,9 @@ jQuery(document).ready(function($) {
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
 									<option value="cryptoid.info_carboncoin"> Cryptoid.info (Carboncoin)</option>
 									<option value="shadowcash.host"> ShadowCash</option>
+									<option value="bch.host">Bitcoin Cash</option>
+									<option value="bsv.host">Bitcoin SV</option>
+									<option value="dash.host">Dash</option>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
