--- a/index.html
+++ b/index.html
@@ -6670,6 +6670,9 @@ jQuery(document).ready(function($) {
 									<option value="bch.host">Bitcoin Cash</option>
 									<option value="bsv.host">Bitcoin SV</option>
 									<option value="dash.host">Dash</option>
+									<option value="grs.host">Groestlcoin</option>
+									<option value="zcash.host">Zcash</option>
+									<option value="ripple.host">Ripple</options>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
@@ -6700,6 +6703,9 @@ jQuery(document).ready(function($) {
 									<option value="bch.host">Bitcoin Cash</option>
 									<option value="bsv.host">Bitcoin SV</option>
 									<option value="dash.host">Dash</option>
+									<option value="grs.host">Groestlcoin</option>
+									<option value="zcash.host">Zcash</option>
+									<option value="ripple.host">Ripple</options>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
