Fixes and Added Coin
Fixed misc broadcast problems and added Feathercoin support for Create, Sign and Broadcasting.

--- a/index.html
+++ b/index.html
@@ -6044,7 +6044,7 @@ jQuery(document).ready(function($) {
 
 					<div class="tab-pane tab-content" id="about">
 						<h2>About <small>open source Pandacoin wallet</small></h2>
-						<p>Version 2.0.29</p>
+						<p>Version 2.0.30</p>
 						<p>Compatible with Pandacoin</p>
                         <p><a href="https://github.com/DigitalPandacoin/coinbin">https://github.com/DigitalPandacoin/coinbin</a></p>
 						<p>Forked from <a href="https://coinb.in">https://coinb.in"</a></p>
@@ -6662,6 +6662,7 @@ jQuery(document).ready(function($) {
 									<option value="custom_htmlcoin">Htmlcoin</options>
 									<option value="custom_safecoin">SafeCoin</options>
 									<option value="custom_rdd">Reddcoin</options>
+									<option value="custom_feather">feather</options>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
@@ -6699,6 +6700,7 @@ jQuery(document).ready(function($) {
 									<option value="custom_htmlcoin">Htmlcoin</options>
 									<option value="custom_safecoin">SafeCoin</options>
 									<option value="custom_rdd">Reddcoin</options>
+									<option value="custom_feather">feather</options>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
@@ -6724,7 +6726,7 @@ jQuery(document).ready(function($) {
 
 		<div id="footer">
 			<div class="container text-right">
-	        		<p class="text-muted">Version  2.0.29</p>
+	        		<p class="text-muted">Version  2.0.30</p>
 			</div>
 		</div>
 
