Added Coins to Custom API
Viacoin, Axecore, capricoin, zcash, commercium, globaltoken, zcoin, qtum, ILCoin and SmartCash

Listunspent, Balance and Broadcast API added

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
 				document.getElementById("coinjs_priv").value = "0xcc";
 				document.getElementById("coinjs_multisig").value = "0x10";
 				document.getElementById("coinLogo").src = "images/logo/axe.png";
-				document.getElementById("bTtitle").textContent = "Axe";
-				document.getElementById("bTtitle1").textContent = "Axe";
+				document.getElementById("bTtitle").textContent = "Axecore";
+				document.getElementById("bTtitle1").textContent = "Axecore";
 				tickerCode = "AXE";
 				coingeckoCoinName = "axe";
 				coinGecko = "true";
@@ -6509,6 +6509,7 @@ jQuery(document).ready(function($) {
 									<option value="litecoin_mainnet" rel="0x30;0xb0;0x32;0x019da462;0x019d9cfe;blockchair_litecoin;blockchair_litecoin">Litecoin (mainnet)</option>
 									<option value="dogecoin_mainnet" rel="0x1e;0x9e;0x16;0x0827421e;0x089944e4;blockcypher_dogecoin;blockchair_dogecoin">Dogecoin (mainnet)</option>
 									<option value="shadowcash_mainnet" rel="0x3f;0xbf;0x7d;0xee80286a;0xee8031e8;shadowcash.host;shadowcash.host">ShadowCash (mainnet)</option>
+									<!-- <option value="" rel="0x3f;0xbf;0x7d;0xee80286a;0xee8031e8;x;x"></option> -->
 									<option value="custom" rel="0x00;0x80;0x05;0x488b21e;0x488ade4;cryptoid.custom;cryptoid.custom">Custom</option>
 								</select>
 							</div>
