--- a/index.html
+++ b/index.html
@@ -4142,7 +4142,7 @@ else if (document.getElementById("customCoinTicker").value == "vips") {
   document.getElementById("bTtitle").textContent = "Vipstar Coin";
   document.getElementById("bTtitle1").textContent = "Vipstar Coin";
   tickerCode = "VIPS";
-  coingeckoCoinName = "vipstarcoin";
+	  coingeckoCoinName = "vipstarcoin";
   coinGecko = "true";
 }
 else if (document.getElementById("customCoinTicker").value == "pgn") {
@@ -4384,7 +4384,7 @@ else if (document.getElementById("customCoinTicker").value == "mgd") {
   document.getElementById("bTtitle").textContent = "MassGrid";
   document.getElementById("bTtitle1").textContent = "MassGrid";
   tickerCode = "MGD";
-  coingeckoCoinName = "masssgrid";
+  coingeckoCoinName = "masssgrid"; // Last Checked
   coinGecko = "true";
 }
 else if (document.getElementById("customCoinTicker").value == "ttn") {
@@ -6663,7 +6663,18 @@ jQuery(document).ready(function($) {
 									<option value="custom_htmlcoin">Htmlcoin</options>
 									<option value="custom_safecoin">SafeCoin</options>
 									<option value="custom_rdd">Reddcoin</options>
-									<option value="custom_feather">feather</options>
+									<option value="custom_feather">feathercoin</options>
+									<option value="custom_viacoin">Viacoin</options>
+									<option value="custom_axecore">Axecore</options>
+									<option value="custom_capricoin">Capricoin</options>
+									<option value="custom_zcash">zCash</options>
+									<option value="custom_commercium">Commercium</options>
+									<option value="custom_globaltoken">GlobalToken</options>
+									<option value="custom_zcoin">zCoin</options>
+									<option value="custom_qtum">qtum</options>
+									<option value="custom_ilcoin">ILCoin</options>
+									<option value="custom_smartcash">SmartCash</options>
+									<option value="custom_terracoin">Terracoin</options>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
@@ -6701,7 +6712,18 @@ jQuery(document).ready(function($) {
 									<option value="custom_htmlcoin">Htmlcoin</options>
 									<option value="custom_safecoin">SafeCoin</options>
 									<option value="custom_rdd">Reddcoin</options>
-									<option value="custom_feather">feather</options>
+									<option value="custom_feather">feathercoin</options>
+									<option value="custom_viacoin">Viacoin</options>
+									<option value="custom_axecore">Axecore</options>
+									<option value="custom_capricoin">Capricoin</options>
+									<option value="custom_zcash">zCash</options>
+									<option value="custom_commercium">Commercium</options>
+									<option value="custom_globaltoken">GlobalToken</options>
+									<option value="custom_zcoin">zCoin</options>
+									<option value="custom_qtum">qtum</options>
+									<option value="custom_ilcoin">ILCoin</options>
+									<option value="custom_smartcash">SmartCash</options>
+									<option value="custom_terracoin">Terracoin</options>
 									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
 									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
